objects/DandB_Aae__c.object
<CustomObject>
    <fields>
        <fullName>DandB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DandB</label>
        <referenceTo>DandB__c</referenceTo>
        <relationshipLabel>DandB_Aae</relationshipLabel>
        <relationshipName>DandB_Aae</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>accountTypeCode__c</fullName>
        <label>accountTypeCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountTypeDesc__c</fullName>
        <label>accountTypeDesc</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>applicationDay__c</fullName>
        <label>applicationDay</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>applicationHour__c</fullName>
        <label>applicationHour</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>applicationMinute__c</fullName>
        <label>applicationMinute</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>applicationMonth__c</fullName>
        <label>applicationMonth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>applicationSecond__c</fullName>
        <label>applicationSecond</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>applicationYear__c</fullName>
        <label>applicationYear</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditObligationCode__c</fullName>
        <label>creditObligationCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditObligationDesc__c</fullName>
        <label>creditObligationDesc</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>day__c</fullName>
        <label>day</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hour__c</fullName>
        <label>hour</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>minute__c</fullName>
        <label>minute</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>month__c</fullName>
        <label>month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organisation__c</fullName>
        <label>organisation</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purpose__c</fullName>
        <label>purpose</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>second__c</fullName>
        <label>second</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>segId__c</fullName>
        <label>segId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <label>sequence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uniqueCustomerReference__c</fullName>
        <label>uniqueCustomerReference</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>year__c</fullName>
        <label>year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>DandB_Aae</label>
    <nameField>
        <label>DandB_Aae Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DandB_Aae</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>